# terra-client-python

./: .fernignore  .gitignore  README.md  mypy.ini  mypy_requirements.txt  noxfile.py  pyproject.toml  reference.md  setup.py  tempCodeRunnerFile.py  test_requirements.txt
.github/_scripts/: update_version.py
.github/workflows/: ci.yml  create_release.yml  deploy.yml
docs/: index.html  search.js  terra.html
docs-old/terra/: exceptions.html  utils.html
docs-old/terra/models/: base_model.html
docs-old/terra/models/v2/: activity.html  athlete.html  nutrition.html  sleep.html
docs-sphinx/source/: conf.py  index.rst
docs-sphinx/source/_autosummary/: terra.api.api_responses.rst  terra.base_client.rst  terra.exceptions.rst  terra.models.base_model.rst  terra.models.v2.activity.rst  terra.models.v2.body.rst  terra.models.v2.daily.rst  terra.models.v2.nutrition.rst  terra.models.v2.rst  terra.models.v2.samples.rst  terra.models.v2.sleep.rst  terra.rst
docs-sphinx/source/_templates/: cmt.rst  custom-module-template.rst
docs/source/: conf.py  terra.rst
docs/source/_autosummary/: terra.api.rst  terra.constants.rst  terra.models.rst  terra.models.user.rst  terra.models.v2.activity_sample.rst  terra.models.v2.athlete.rst  terra.models.v2.menstruation.rst  terra.utils.rst
docs/source/_templates/: custom-class-template.rst
docs/terra/: api.html  base_client.html  constants.html  models.html
docs/terra/api/: api_responses.html
docs/terra/models/: base_model.html  user.html  v2.html
docs/terra/models/v2/: activity.html  activity_sample.html  body.html  daily.html  menstruation.html  sleep.html  (+2 more)
src/terra/: __init__.py  client.py  environment.py  version.py
src/terra/activity/: client.py  raw_client.py
src/terra/athlete/: client.py  raw_client.py
src/terra/authentication/: client.py  raw_client.py
src/terra/body/: client.py  raw_client.py
src/terra/core/: client_wrapper.py
src/terra/daily/: client.py  raw_client.py
src/terra/integrations/: client.py  raw_client.py
src/terra/menstruation/: client.py  raw_client.py
src/terra/nutrition/: client.py  raw_client.py
src/terra/plannedworkout/: client.py  raw_client.py
src/terra/sleep/: client.py  raw_client.py
src/terra/types/: a_fib_classification_sample.py  access_revoked_event.py  access_revoked_webhook.py  active_durations_data.py  activity.py  activity_event.py  activity_fetch_request_end_date.py  activity_level.py  activity_level_sample.py  activity_metadata.py  activity_webhook.py  asleep_durations.py  athlete.py  athlete_collection.py  athlete_event.py  athlete_webhook.py  auth_error_event.py  auth_event.py  auth_success_event.py  authentication_failed_webhook.py  awake_durations.py  bad_request_error_body.py  bad_request_error_body_status.py  blood_pressure_data.py  blood_pressure_sample.py  body.py  body_battery_sample.py  body_event.py  body_fetch_request_end_date.py  body_metadata.py  body_webhook.py  breath.py  breath_sample.py  breaths_data.py  cadence_planned_workout_step_target.py  cadence_planned_workout_step_target_target_type.py  cadence_sample.py  calorie_sample.py  calories_data.py  calories_planned_workout_step_duration.py  (+226 more)
src/terra/user/: client.py  raw_client.py
src/terra/utils/: verify_signature.py
terra/: MANIFEST.in  __init__.py  base_client.py  checks.py  constants.py  exceptions.py  pyproject.toml  utils.py
terra/api/: __init__.py  api_responses.py
terra/models/: __init__.py  api_responses.py  base_model.py  user.py
terra/models/v2/: __init__.py  activity.py  athlete.py  body.py  daily.py  enums.py  menstruation.py  nutrition.py  samples.py  sleep.py
terra/models/v2022_03_16/: __init__.py  activity.py  activity_sample.py  athlete.py  body.py  daily.py  menstruation.py  nutrition.py  samples.py  sleep.py
tests/: test_data.py
tests/terra/: test_base_client.py
tests/terra/api/: test_api_responses.py
tests/terra/models/: test_base_model.py  test_user.py
tests/utils/: test_http_client.py  test_query_encoding.py  test_serialization.py
(+54 files in other folders)
